--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-  <title> Заголовок сайта - 5
-  </title>
+  <title> Заголовок сайта - 5</title>
   <body>
-    Содержимое сайта
+    <header>Шапка сайта</header>
+    <main>Основная часть сайта</main>
+    <footer>Подвал сайта</footer>
   </body>
 </html>
