--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
   <title> Заголовок сайта - 5</title>
   <body>
     <header>Шапка сайта</header>
-    <main>Основная часть сайта</main>
+    <main>Основная часть сайта<br>
+      <form>
+        <label>Введите свое имя <input type="text"></label>
+        <label>Введите свой e-mail <input type="email"></label>
+        <label>Отправить <input type="submit"></label>
+      </form>
+    </main>
     <footer>Подвал сайта</footer>
   </body>
 </html>
