--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <header>Шапка сайта</header>
     <main>Основная часть сайта<br>
       <form>
-        <label>Введите свое имя <input type="text"></label>
-        <label>Введите свой e-mail <input type="email"></label>
-        <label>Отправить <input type="submit"></label>
+        <p><label>Введите свое имя <input type="text"></label></p>
+        <p><label>Введите свой e-mail <input type="email"></label></p>
+        <p><label>Отправить <input type="submit"></label></p>
       </form>
     </main>
     <footer>Подвал сайта</footer>
