--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
   <title> Заголовок сайта - 5</title>
   <body>
-    <header>Шапка сайта</header>
+    <header id="start">Шапка сайта</header>
     <main>Основная часть сайта<br>
       <form>
         <p><label>Введите свое имя <input type="text"></label></p>
         <p><label>Введите свой e-mail <input type="email"></label></p>
         <p><label>Отправить <input type="submit"></label></p>
       </form>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <a href="#start">В начало</a>
     </main>
     <footer>Подвал сайта</footer>
   </body>
