--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <main>Основная часть сайта<br>
       <form>
         <p><label>Введите свое имя <input type="text"></label></p>
-        <p><label>Введите свой телефон <input type="tel"></label></p>
+        <p><label>Получать рассылку <input type="checkbox"></label></p>
         <p><label>Отправить <input type="submit"></label></p>
       </form>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
