--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <form>
         <p><label>Введите свое имя <input type="text"></label></p>
         <p><label>Получать рассылку <input type="checkbox"></label></p>
-        <p><label>Отправить <input type="submit"></label></p>
+        <p><label><input type="submit" value="Отправить"></label></p>
       </form>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <a href="#start">В начало</a>
