--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title> Заголовок сайта - 5</title>
   <body>
-    <header id="start"><img src="https://drive.google.com/file/d/1Ddiahf51NHZyo3jI5I_Krwzk4-TGFAsv/view?usp=drive_link" width="50px" height="50px"/> Шапка сайта </header>
+    <header id="start"><img src="https://cloud.mail.ru/public/vqnh/tmizno7HY" width="50px" height="50px"/> Шапка сайта </header>
     <main>Основная часть сайта<br>
       <form>
         <p><label>Введите свое имя <input type="text"></label></p>
