--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title> Заголовок сайта - 5</title>
   <body>
-    <header id="start"><img src="https://cloud.mail.ru/public/vqnh/tmizno7HY" width="100px" height="100px"/> Шапка сайта </header>
+    <header id="start"><img src="https://drive.google.com/file/d/1dWZqM38sWFcUTx9KinFvLKfP77w4bcD6/view?usp=sharing" width="100px" height="100px"/> Шапка сайта </header>
     <main>Основная часть сайта<br>
       <form>
         <p><label>Введите свое имя <input type="text"></label></p>
